@@ -20,40 +20,40 @@ import com.nisovin.magicspells.spelleffects.EffectPosition;
 import com.nisovin.magicspells.spells.TargetedLocationSpell;
 import com.nisovin.magicspells.util.SpellData;
 
-public class UndoReplaceSpell extends TargetedSpell implements TargetedLocationSpell {
+public class UndoSpell extends TargetedSpell implements TargetedLocationSpell {
 
-	private ConfigData<Float> radius;
+	private ConfigData<Integer> radius;
 
 	private boolean pointBlank;
 	private boolean powerAffectsRadius;
 	private boolean applyPhysics;
 
-	private List<String> replaceSpellNames;
-	private List<ReplaceSpell> replaceSpells;
+	private List<String> spellNames;
+	private List<Spell> spells;
 
-	public UndoReplaceSpell(MagicConfig config, String spellName) {
+	public UndoSpell(MagicConfig config, String spellName) {
 		super(config, spellName);
 
-		radius = getConfigDataFloat("radius", 10F);
+		radius = getConfigDataInt("radius", 10);
 		pointBlank = getConfigBoolean("point-blank", true);
 		powerAffectsRadius = getConfigBoolean("power-affects-radius", true);
 		applyPhysics = getConfigBoolean("apply-physics", true);
-		replaceSpellNames = getConfigStringList("replace-spells", null);
-		replaceSpells = new ArrayList<>();
+		spellNames = getConfigStringList("spells", null);
+		spells = new ArrayList<>();
 	}
 
 	@Override
 	public void initialize() {
 		super.initialize();
 
-		if (replaceSpellNames != null) {
-			for (String replaceSpellName : replaceSpellNames) {
-				Spell spell = MagicSpells.getSpellByInternalName(replaceSpellName);
-				if (spell instanceof ReplaceSpell) {
-					replaceSpells.add((ReplaceSpell) spell);
+		if (spellNames != null) {
+			for (String spellName : spellNames) {
+				Spell spell = MagicSpells.getSpellByInternalName(spellName);
+				if (spell instanceof ReplaceSpell || spell instanceof DestroySpell) {
+					spells.add(spell);
 				} else {
 					MagicSpells.error(
-							"UndoReplaceSpell '" + internalName + "' has an invalid spell defined in replace-spells!");
+							"UndoSpell '" + internalName + "' has an invalid spell defined in spells!");
 					return;
 				}
 			}
@@ -67,52 +67,46 @@ public class UndoReplaceSpell extends TargetedSpell implements TargetedLocationS
 			if (loc == null) {
 				return noTarget(data);
 			}
-			undoReplaces(data.builder().location(loc).build());
+			undo(data);
 		}
 		return PostCastAction.HANDLE_NORMALLY;
 	}
 
 	@Override
 	public boolean castAtLocation(SpellData data) {
-		undoReplaces(data);
+		undo(data);
 		return true;
 	}
 
-	private void undoReplaces(SpellData data) {
-		Location loc = data.location();
-		float radSq = radius.get(data);
+	private void undo(SpellData data) {
+		int rad = radius.get(data);
 		if (powerAffectsRadius)
-			radSq *= data.power();
-		radSq *= radSq;
+			rad *= data.power();
 
+		Location loc = data.location();
 		World locWorld = loc.getWorld();
 		if (locWorld == null) {
-			MagicSpells.error("Location world is null for UndoReplaceSpell.");
+			MagicSpells.error("Location world is null for UndoSpell.");
 			return;
 		}
 
-		List<ReplaceSpell> replaceSpellsTemp = replaceSpells.isEmpty()
+		List<Spell> spellsTemp = spells.isEmpty()
 				? MagicSpells.spells().stream()
-						.filter(ReplaceSpell.class::isInstance)
-						.map(ReplaceSpell.class::cast)
-						.collect(Collectors.toList())
-				: new ArrayList<>(replaceSpells);
+						.filter(spell -> spell instanceof ReplaceSpell || spell instanceof DestroySpell)
+						.toList()
+				: new ArrayList<>(spells);
 
-		for (ReplaceSpell replaceSpell : replaceSpellsTemp) {
-			Iterator<Entry<Block, BlockData>> iterator = replaceSpell.blocks.entrySet().iterator();
-			while (iterator.hasNext()) {
-				Entry<Block, BlockData> entry = iterator.next();
-				Block block = entry.getKey();
-				BlockData blockData = entry.getValue();
-
-				if (!block.getWorld().equals(locWorld))
-					continue;
-				if (block.getLocation().distanceSquared(loc) > radSq)
-					continue;
-
-				block.setBlockData(blockData, applyPhysics);
-				iterator.remove();
-				playSpellEffects(EffectPosition.TARGET, block.getLocation(), data);
+		for (Spell spell : spellsTemp) {
+			for (int y = loc.getBlockY() - rad; y <= loc.getBlockY() + rad; y++) {
+				for (int x = loc.getBlockX() - rad; x <= loc.getBlockX() + rad; x++) {
+					for (int z = loc.getBlockZ() - rad; z <= loc.getBlockZ() + rad; z++) {
+						Block block = loc.getWorld().getBlockAt(x, y, z);
+						MagicSpells.getAlteredBlockManager().getByBlockAndInternalName(block, spell.getInternalName()).forEach(it -> {
+							it.undo(applyPhysics);
+							playSpellEffects(EffectPosition.TARGET, block.getLocation(), data);
+						});
+					}
+				}
 			}
 		}
 
